crates/core/tests/ui/typed_query/fail/update_without_where.stderr
error: this SQL construct is outside the typed_sql v1 subset: typed_sql v1 requires UPDATE statements to include a WHERE predicate
          |
        1 | UPDATE users SET name = $name
          | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  --> tests/ui/typed_query/fail/update_without_where.rs:11:9
   |
11 |         UPDATE users SET name = $name
   |         ^^^^^^
